--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,7 @@
     letter-spacing: 0%;
     text-align: center;
 }
-.box{
+.box-001{
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -107,7 +107,7 @@
     
 
 }
-.box img{
+.box-001 img{
     height: 124.69px;
     width: 137.44px;
 }
@@ -174,11 +174,120 @@
     background-color: orange;
     margin-left: 5px;
 }
-.Stories{
+/* story section */
+.stories{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: url(image),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+    margin-top: 60px;
+}
+.story-title{
+    color: rgb(0, 0, 0);
+    font-size: 46px;
+    font-weight: 700;
+    line-height: 57.5px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.box-2-5-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    width: 601px;
+    height: 622px;
+
+}
+
+.box{
+    width: 290.69px;
+    height: 301.61px;
+    margin-top: 20px;
+    background-color: #FFFFFF;
+    border-radius: 16px;
+    padding: 0px;
+    text-align: center;
+    /* padding: 0 5px; */
+}
+.box img{
+    width: 100%;
+    height: 177px;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+#box-1 img{
+    width: 100%;
+    height: 337px;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
 }
 #box-1{
-    /* grid-column: span 2; */
-    grid-row: span 2;
+    background-color: #FFFFFF;
+    border-radius: 16px;
+    padding: 0px;
+    border-radius: 16px;
+}
+.box-1-title{
+    color: rgb(0, 0, 0);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 38.35px;
+    letter-spacing: 0%;
+    /* margin-top: 40px; */
+    margin-left: 38px;
+}
+.box-1-description{
+    color: rgb(102, 102, 102);
+    font-size: 15.34px;
+    font-weight: 500;
+    line-height: 28.76px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-left: 38px;
+    margin-right: 38px;
+    padding-bottom: 20px;
+    
+}
+.box-1-container{
+    margin-top: 20px;
+    width: 540.2701px;
+    height: 630.52px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+.box-btn-1{
+   
+    position: relative;
+    width: 174.51px;
+    height: 47.93px;
+    left: 38.35px;
+    top: -30.14px;
+    border-radius: 47.93px;
+    background: rgb(60, 216, 232);
+    /* display: none; */
+    margin: 0px;
+    border: none;
+}
+.btn{
+    
+    position: relative;
+    width: 174.51px;
+    height: 30.35px;
+    left: -30.35px;
+    top: -20.81px;
+    border-radius: 47.93px;
+    background: rgb(149, 178, 38);
+    border: none;
+    color: white;
+}
+.btn-02{
+   
+
+    background: rgb(93, 88, 240);;
+}
+.story-title-1{
+    text-align: left;
+    padding-left: 5px;
+}
+#box-2,#box-3{
+    margin-bottom: 10px;
 }
