--- a/style/style.css
+++ b/style/style.css
@@ -271,13 +271,16 @@
     
     position: relative;
     width: 174.51px;
-    height: 30.35px;
-    left: -30.35px;
-    top: -20.81px;
+    height: 25.35px;
+    left: 20.35px;
+    top: -18.81px;
     border-radius: 47.93px;
     background: rgb(149, 178, 38);
     border: none;
     color: white;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
 }
 .btn-02{
    
@@ -290,4 +293,55 @@
 }
 #box-2,#box-3{
     margin-bottom: 10px;
+}
+/* footer style  */
+.footer-bg{
+    background-color: #01ACFD;
+    /* max-width: 1439px; */
+    margin: 0,auto;
+    height: 519px;
+    align-items: center;
+    justify-content: center;
+}
+.footer-box{
+    /* align-items: center; */
+    justify-content: center;
+    gap: 140px;
+}
+.f-box-1{
+    align-items: center;
+}
+.f-box-1 img{
+    width: 82px;
+    height: 82px;
+}
+.f-box-2>span{
+    display: block;
+}
+.f-box-2>span>a{
+    text-decoration: none;
+    color: white;
+}
+.footer-title{
+    color: rgb(255, 255, 255);
+    font-size: 42.14px;
+    font-weight: 700;
+    line-height: 39.51px;
+    text-align: left;
+}
+.footer-des{
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.About-school{
+    color: rgb(255, 255, 255);
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
 }
