--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,9 @@
     background: rgb(17, 17, 17);
     color: white;
 }
+.for-mobile{
+    display: none;
+}
 .navbar{
     /* justify-content: center; */
     align-items: center;
@@ -56,6 +59,8 @@
 .banner{
     align-items: center;
     justify-content: center;
+    max-width: 1440px;
+    margin: 0 , auto;
 
 }
 .Banner-text{
@@ -294,14 +299,19 @@
 #box-2,#box-3{
     margin-bottom: 10px;
 }
+.btn-f-story{
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
 /* footer style  */
 .footer-bg{
     background-color: #01ACFD;
     /* max-width: 1439px; */
-    margin: 0,auto;
-    height: 519px;
+    /* margin: 0,auto; */
+    /* height: 519px; */
     align-items: center;
     justify-content: center;
+    /* margin-top: 100px; */
 }
 .footer-box{
     /* align-items: center; */
@@ -344,4 +354,39 @@
     line-height: 26px;
     letter-spacing: 0%;
     text-align: left;
+}
+/* responsive part */
+@media screen and (max-width:576px) {
+    .navbar{
+        display: none;
+    }
+    .for-mobile{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom:1px solid orange ;
+    }
+    .banner{
+        flex-direction: column-reverse;
+
+    }
+    .banner-title{
+        text-align: center;
+    }
+    .Banner-text{
+        text-align: center;
+    }
+    .curriculum-box-container{
+        flex-direction: column;
+    }
+    .left-right{
+        display: none;
+    }
+   .box-1-container{
+    display: none;
+   }
+   .footer-box{
+
+    flex-direction: column;
+   }
 }
