--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@
     background: rgb(17, 17, 17);
     color: white;
 }
-.for-mobile{
+.for-mobile ,.for-mobile-01{
     display: none;
 }
 .navbar{
@@ -64,15 +64,16 @@
 
 }
 .Banner-text{
-    width: 640px;
+  width: 640px;
+   /* margin: 0,auto; */
 }
 .banner-title{
     
-    font-size: 56px;
+    font-size: 3.5rem;
     font-weight: 700;
     line-height: 61px;
     letter-spacing: 0%;
-    text-align: left;
+    
 }
 #banner-text-01{
     color: orange;
@@ -82,7 +83,7 @@
 }
 .banner-description{
     color: rgb(17, 17, 17);
-    font-size: 20px;
+    font-size: 1.4rem;
     font-weight: 400;
     line-height: 25px;
     letter-spacing: 0%;
@@ -93,9 +94,12 @@
     align-items: center;
     justify-content: center;
 }
+.curriculum-box-container{
+    gap: 20px;
+}
 .title{
     color: rgb(0, 0, 0);
-    font-size: 46px;
+    font-size: 2.8rem;
     font-weight: 700;
     line-height: 57.5px;
     letter-spacing: 0%;
@@ -124,7 +128,7 @@
     background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
 }
 .curriculum-box-2{
-    margin-left: 20px;
+    /* margin-left: 20px; */
     box-sizing: border-box;
     border: 0.94px solid rgb(255, 244, 220);
     border-radius: 18.86px;
@@ -132,7 +136,7 @@
     background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
 }
 .curriculum-box-3{
-    margin-left: 20px;
+    /* margin-left: 20px; */
     box-sizing: border-box;
     border: 0.94px solid rgb(242, 232, 255);
     border-radius: 18.86px;
@@ -153,7 +157,7 @@
 .curriculum-description{
     color: rgb(128, 128, 128);
     font-family: Raleway;
-    font-size: 15.09px;
+    font-size: 1rem;
     font-weight: 500;
     line-height: 28.3px;
     letter-spacing: 0%;
@@ -184,12 +188,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url(image),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+    background: linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
     margin-top: 60px;
 }
 .story-title{
     color: rgb(0, 0, 0);
-    font-size: 46px;
+    font-size: 2.8rem;
     font-weight: 700;
     line-height: 57.5px;
     letter-spacing: 0%;
@@ -233,7 +237,7 @@
 }
 .box-1-title{
     color: rgb(0, 0, 0);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     line-height: 38.35px;
     letter-spacing: 0%;
@@ -242,7 +246,7 @@
 }
 .box-1-description{
     color: rgb(102, 102, 102);
-    font-size: 15.34px;
+    font-size: 1rem;
     font-weight: 500;
     line-height: 28.76px;
     letter-spacing: 0%;
@@ -334,14 +338,14 @@
 }
 .footer-title{
     color: rgb(255, 255, 255);
-    font-size: 42.14px;
+    font-size: 2.7rem;
     font-weight: 700;
     line-height: 39.51px;
     text-align: left;
 }
 .footer-des{
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 1.4rem;
     font-weight: 400;
     line-height: 25px;
     letter-spacing: 0%;
@@ -349,7 +353,7 @@
 }
 .About-school{
     color: rgb(255, 255, 255);
-    font-size: 26px;
+    font-size: 1.6rem;
     font-weight: 700;
     line-height: 26px;
     letter-spacing: 0%;
@@ -360,18 +364,26 @@
     .navbar{
         display: none;
     }
-    .for-mobile{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        border-bottom:1px solid orange ;
+    .for-mobile-01{
+        display: block;
     }
+    .for-mobile{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px; 
+    }
+    .logo-f-p img{
+        width: 80%;
+    }
+  
     .banner{
         flex-direction: column-reverse;
 
     }
     .banner-title{
         text-align: center;
+        font-size: 32px;
     }
     .Banner-text{
         text-align: center;
@@ -388,5 +400,48 @@
    .footer-box{
 
     flex-direction: column;
+   }
+   .box-2-5-container{
+    display: none;
+   }
+   .banner-description{
+    font-size: 14px;
+   }
+   .footer-box{
+    gap: 50px;
+   }
+   .footer-des{
+    font-size: 16px;
+   }
+   .title{
+    font-size: 26px;
+   }
+   .footer-title{
+    font-size: 35.73px;
+   }
+   .f-box-1>img{
+    width: 69px;
+    height: 69px;
+   }
+   .story-title{
+    font-size: 26px;
+   }
+   .About-school{
+    font-size: 20px;
+   }
+   .box{
+    width: 90%;
+   }
+   /* .btn-secondary{
+    width:100px ;
+   }
+   .btn-f-story{
+    width: 60px;
+   } */
+   .bg{
+    width: 100%;
+   }
+   .Banner-text{
+    width: 95%;
    }
 }
