fixed a simple issu

--- a/style/style.css
+++ b/style/style.css
@@ -373,8 +373,8 @@
       align-items: center;
       padding: 10px; 
     }
-    .logo-f-p img{
-        width: 80%;
+    .img-m{
+        width: 90%;
     }
   
     .banner{
