--- a/style/style.css
+++ b/style/style.css
@@ -1,371 +1,372 @@
 
+
 /* code for font */
 .quicksand-font{
-  font-family: "Quicksand", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-.bg{
-    background-image: url('../assets/bg.png');
-    background-repeat: y;
-}
-/* display flex */
-
-.display-flex{
-    display: flex;
-}
-.btn-primary{
-    border-radius: 12px;
-    background: rgb(254, 163, 1);
-    border: none;
-    width: 197px;
-    height: 50px;
-}
-.btn-secondary{
-    width: 197px;
-    height: 50px;
-    border-radius: 12px;
-    background: rgb(17, 17, 17);
-    color: white;
-}
-.for-mobile ,.for-mobile-01{
-    display: none;
-}
-.navbar{
-    /* justify-content: center; */
-    align-items: center;
-    justify-content: space-around;
-}
-.middle-part{
-    gap: 32px;
-}
-.middle-part a{
-    text-decoration: none;
-}
-.Home{
-    color: #FEA301;
-}
-.About{
-    color:skyblue ;
-}
-.Facilities{
-    color: #05D4DF;
-}
-.Admission{
-    color: #5D58EF;
-}
-/* banner style */
-.banner{
-    align-items: center;
-    justify-content: center;
-    max-width: 1440px;
-    margin: 0 , auto;
-
-}
-.Banner-text{
-  width: 640px;
-   /* margin: 0,auto; */
-}
-.banner-title{
-    
-    font-size: 3.5rem;
-    font-weight: 700;
-    line-height: 61px;
-    letter-spacing: 0%;
-    
-}
-#banner-text-01{
-    color: orange;
-}
-#banner-text-02{
-    color: skyblue;
-}
-.banner-description{
-    color: rgb(17, 17, 17);
-    font-size: 1.4rem;
+    font-family: "Quicksand", serif;
+    font-optical-sizing: auto;
     font-weight: 400;
-    line-height: 25px;
-    letter-spacing: 0%;
-}
-/* Standard Curriculum */
-.curriculum{
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.curriculum-box-container{
-    gap: 20px;
-}
-.title{
-    color: rgb(0, 0, 0);
-    font-size: 2.8rem;
-    font-weight: 700;
-    line-height: 57.5px;
-    letter-spacing: 0%;
-    text-align: center;
-}
-.box-001{
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 367.8px;
-    height: 476.78px;
-    text-align: center;
-    padding: 20px;
-    
-
-}
-.box-001 img{
-    height: 124.69px;
-    width: 137.44px;
-}
-.curriculum-box-1{
-    box-sizing: border-box;
-    border: 0.94px solid rgb(222, 245, 255);
-    border-radius: 18.86px;
-    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
-    background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
-}
-.curriculum-box-2{
-    /* margin-left: 20px; */
-    box-sizing: border-box;
-    border: 0.94px solid rgb(255, 244, 220);
-    border-radius: 18.86px;
-    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
-    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
-}
-.curriculum-box-3{
-    /* margin-left: 20px; */
-    box-sizing: border-box;
-    border: 0.94px solid rgb(242, 232, 255);
-    border-radius: 18.86px;
-    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
-    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
-}
-.btn-1 , .btn-2 , .btn-3{
-    border: none;
-    background-color: transparent;
-    color: #64C8FF;
-}
-.btn-2{
-    color: #FEA301;
-}
-.btn-3{
-    color: #8700FF;
-}
-.curriculum-description{
-    color: rgb(128, 128, 128);
-    font-family: Raleway;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 28.3px;
-    letter-spacing: 0%;
-    text-align: center;
-}
-.left-right{
-    margin-top: 60px;
-    align-items: center;
-    justify-content: center;
-    
-    
-}
-.fa-chevron-left, .fa-chevron-right{
-    position: relative;
-    left: 25px;
-    top: 23px;
-    color: white;
-}
-.chevron{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: orange;
-    margin-left: 5px;
-}
-/* story section */
-.stories{
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
-    margin-top: 60px;
-}
-.story-title{
-    color: rgb(0, 0, 0);
-    font-size: 2.8rem;
-    font-weight: 700;
-    line-height: 57.5px;
-    letter-spacing: 0%;
-    text-align: center;
-}
-.box-2-5-container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    width: 601px;
-    height: 622px;
-
-}
-
-.box{
-    width: 290.69px;
-    height: 301.61px;
-    margin-top: 20px;
-    background-color: #FFFFFF;
-    border-radius: 16px;
-    padding: 0px;
-    text-align: center;
-    /* padding: 0 5px; */
-}
-.box img{
-    width: 100%;
-    height: 177px;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
-}
-#box-1 img{
-    width: 100%;
-    height: 337px;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
-}
-#box-1{
-    background-color: #FFFFFF;
-    border-radius: 16px;
-    padding: 0px;
-    border-radius: 16px;
-}
-.box-1-title{
-    color: rgb(0, 0, 0);
-    font-size: 1.5rem;
-    font-weight: 700;
-    line-height: 38.35px;
-    letter-spacing: 0%;
-    /* margin-top: 40px; */
-    margin-left: 38px;
-}
-.box-1-description{
-    color: rgb(102, 102, 102);
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 28.76px;
-    letter-spacing: 0%;
-    text-align: left;
-    margin-left: 38px;
-    margin-right: 38px;
-    padding-bottom: 20px;
-    
-}
-.box-1-container{
-    margin-top: 20px;
-    width: 540.2701px;
-    height: 630.52px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-.box-btn-1{
-   
-    position: relative;
-    width: 174.51px;
-    height: 47.93px;
-    left: 38.35px;
-    top: -30.14px;
-    border-radius: 47.93px;
-    background: rgb(60, 216, 232);
-    /* display: none; */
-    margin: 0px;
-    border: none;
-}
-.btn{
-    
-    position: relative;
-    width: 174.51px;
-    height: 25.35px;
-    left: 20.35px;
-    top: -18.81px;
-    border-radius: 47.93px;
-    background: rgb(149, 178, 38);
-    border: none;
-    color: white;
-    text-align: center;
-    margin: 0px;
-    padding: 0px;
-}
-.btn-02{
-   
-
-    background: rgb(93, 88, 240);;
-}
-.story-title-1{
-    text-align: left;
-    padding-left: 5px;
-}
-#box-2,#box-3{
-    margin-bottom: 10px;
-}
-.btn-f-story{
-    margin-top: 30px;
-    margin-bottom: 100px;
-}
-/* footer style  */
-.footer-bg{
-    background-color: #01ACFD;
-    /* max-width: 1439px; */
-    /* margin: 0,auto; */
-    /* height: 519px; */
-    align-items: center;
-    justify-content: center;
-    /* margin-top: 100px; */
-}
-.footer-box{
-    /* align-items: center; */
-    justify-content: center;
-    gap: 140px;
-}
-.f-box-1{
-    align-items: center;
-}
-.f-box-1 img{
-    width: 82px;
-    height: 82px;
-}
-.f-box-2>span{
-    display: block;
-}
-.f-box-2>span>a{
-    text-decoration: none;
-    color: white;
-}
-.footer-title{
-    color: rgb(255, 255, 255);
-    font-size: 2.7rem;
-    font-weight: 700;
-    line-height: 39.51px;
-    text-align: left;
-}
-.footer-des{
-    color: rgb(255, 255, 255);
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 25px;
-    letter-spacing: 0%;
-    text-align: left;
-}
-.About-school{
-    color: rgb(255, 255, 255);
-    font-size: 1.6rem;
-    font-weight: 700;
-    line-height: 26px;
-    letter-spacing: 0%;
-    text-align: left;
-}
-/* responsive part */
-@media screen and (max-width:576px) {
+    font-style: normal;
+  }
+  .bg{
+      background-image: url('../assets/bg.png');
+      background-repeat: y;
+  }
+  /* display flex */
+  
+  .display-flex{
+      display: flex;
+  }
+  .btn-primary{
+      border-radius: 12px;
+      background: rgb(254, 163, 1);
+      border: none;
+      width: 197px;
+      height: 50px;
+  }
+  .btn-secondary{
+      width: 197px;
+      height: 50px;
+      border-radius: 12px;
+      background: rgb(17, 17, 17);
+      color: white;
+  }
+  .for-mobile ,.for-mobile-01{
+      display: none;
+  }
+  .navbar{
+      /* justify-content: center; */
+      align-items: center;
+      justify-content: space-around;
+  }
+  .middle-part{
+      gap: 32px;
+  }
+  .middle-part a{
+      text-decoration: none;
+  }
+  .Home{
+      color: #FEA301;
+  }
+  .About{
+      color:skyblue ;
+  }
+  .Facilities{
+      color: #05D4DF;
+  }
+  .Admission{
+      color: #5D58EF;
+  }
+  /* banner style */
+  .banner{
+      align-items: center;
+      justify-content: center;
+      max-width: 1440px;
+      margin: 0 , auto;
+  
+  }
+  .Banner-text{
+    width: 640px;
+     /* margin: 0,auto; */
+  }
+  .banner-title{
+      
+      font-size: 3.5rem;
+      font-weight: 700;
+      line-height: 61px;
+      letter-spacing: 0%;
+      
+  }
+  #banner-text-01{
+      color: orange;
+  }
+  #banner-text-02{
+      color: skyblue;
+  }
+  .banner-description{
+      color: rgb(17, 17, 17);
+      font-size: 1.4rem;
+      font-weight: 400;
+      line-height: 25px;
+      letter-spacing: 0%;
+  }
+  /* Standard Curriculum */
+  .curriculum{
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+  }
+  .curriculum-box-container{
+      gap: 20px;
+  }
+  .title{
+      color: rgb(0, 0, 0);
+      font-size: 2.8rem;
+      font-weight: 700;
+      line-height: 57.5px;
+      letter-spacing: 0%;
+      text-align: center;
+  }
+  .box-001{
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 367.8px;
+      height: 476.78px;
+      text-align: center;
+      padding: 20px;
+      
+  
+  }
+  .box-001 img{
+      height: 124.69px;
+      width: 137.44px;
+  }
+  .curriculum-box-1{
+      box-sizing: border-box;
+      border: 0.94px solid rgb(222, 245, 255);
+      border-radius: 18.86px;
+      box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+      background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+  }
+  .curriculum-box-2{
+      /* margin-left: 20px; */
+      box-sizing: border-box;
+      border: 0.94px solid rgb(255, 244, 220);
+      border-radius: 18.86px;
+      box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+      background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+  }
+  .curriculum-box-3{
+      /* margin-left: 20px; */
+      box-sizing: border-box;
+      border: 0.94px solid rgb(242, 232, 255);
+      border-radius: 18.86px;
+      box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+      background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+  }
+  .btn-1 , .btn-2 , .btn-3{
+      border: none;
+      background-color: transparent;
+      color: #64C8FF;
+  }
+  .btn-2{
+      color: #FEA301;
+  }
+  .btn-3{
+      color: #8700FF;
+  }
+  .curriculum-description{
+      color: rgb(128, 128, 128);
+      font-family: Raleway;
+      font-size: 1rem;
+      font-weight: 500;
+      line-height: 28.3px;
+      letter-spacing: 0%;
+      text-align: center;
+  }
+  .left-right{
+      margin-top: 60px;
+      align-items: center;
+      justify-content: center;
+      
+      
+  }
+  .fa-chevron-left, .fa-chevron-right{
+      position: relative;
+      left: 25px;
+      top: 23px;
+      color: white;
+  }
+  .chevron{
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background-color: orange;
+      margin-left: 5px;
+  }
+  /* story section */
+  .stories{
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+      margin-top: 60px;
+  }
+  .story-title{
+      color: rgb(0, 0, 0);
+      font-size: 2.8rem;
+      font-weight: 700;
+      line-height: 57.5px;
+      letter-spacing: 0%;
+      text-align: center;
+  }
+  .box-2-5-container{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      width: 601px;
+      height: 622px;
+  
+  }
+  
+  .box{
+      width: 290.69px;
+      height: 301.61px;
+      margin-top: 20px;
+      background-color: #FFFFFF;
+      border-radius: 16px;
+      padding: 0px;
+      text-align: center;
+      /* padding: 0 5px; */
+  }
+  .box img{
+      width: 100%;
+      height: 177px;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+  }
+  #box-1 img{
+      width: 100%;
+      height: 337px;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+  }
+  #box-1{
+      background-color: #FFFFFF;
+      border-radius: 16px;
+      padding: 0px;
+      border-radius: 16px;
+  }
+  .box-1-title{
+      color: rgb(0, 0, 0);
+      font-size: 1.5rem;
+      font-weight: 700;
+      line-height: 38.35px;
+      letter-spacing: 0%;
+      /* margin-top: 40px; */
+      margin-left: 38px;
+  }
+  .box-1-description{
+      color: rgb(102, 102, 102);
+      font-size: 1rem;
+      font-weight: 500;
+      line-height: 28.76px;
+      letter-spacing: 0%;
+      text-align: left;
+      margin-left: 38px;
+      margin-right: 38px;
+      padding-bottom: 20px;
+      
+  }
+  .box-1-container{
+      margin-top: 20px;
+      width: 540.2701px;
+      height: 630.52px;
+      margin-right: 20px;
+      margin-bottom: 20px;
+  }
+  .box-btn-1{
+     
+      position: relative;
+      width: 174.51px;
+      height: 47.93px;
+      left: 38.35px;
+      top: -30.14px;
+      border-radius: 47.93px;
+      background: rgb(60, 216, 232);
+      /* display: none; */
+      margin: 0px;
+      border: none;
+  }
+  .btn{
+      
+      position: relative;
+      width: 174.51px;
+      height: 25.35px;
+      left: 20.35px;
+      top: -18.81px;
+      border-radius: 47.93px;
+      background: rgb(149, 178, 38);
+      border: none;
+      color: white;
+      text-align: center;
+      margin: 0px;
+      padding: 0px;
+  }
+  .btn-02{
+     
+  
+      background: rgb(93, 88, 240);;
+  }
+  .story-title-1{
+      text-align: left;
+      padding-left: 5px;
+  }
+  #box-2,#box-3{
+      margin-bottom: 10px;
+  }
+  .btn-f-story{
+      margin-top: 30px;
+      margin-bottom: 100px;
+  }
+  /* footer style  */
+  .footer-bg{
+      background-color: #01ACFD;
+      /* max-width: 1439px; */
+      /* margin: 0,auto; */
+      /* height: 519px; */
+      align-items: center;
+      justify-content: center;
+      /* margin-top: 100px; */
+  }
+  .footer-box{
+      /* align-items: center; */
+      justify-content: center;
+      gap: 140px;
+  }
+  .f-box-1{
+      align-items: center;
+  }
+  .f-box-1 img{
+      width: 82px;
+      height: 82px;
+  }
+  .f-box-2>span{
+      display: block;
+  }
+  .f-box-2>span>a{
+      text-decoration: none;
+      color: white;
+  }
+  .footer-title{
+      color: rgb(255, 255, 255);
+      font-size: 2.7rem;
+      font-weight: 700;
+      line-height: 39.51px;
+      text-align: left;
+  }
+  .footer-des{
+      color: rgb(255, 255, 255);
+      font-size: 1.4rem;
+      font-weight: 400;
+      line-height: 25px;
+      letter-spacing: 0%;
+      text-align: left;
+  }
+  .About-school{
+      color: rgb(255, 255, 255);
+      font-size: 1.6rem;
+      font-weight: 700;
+      line-height: 26px;
+      letter-spacing: 0%;
+      text-align: left;
+  }
+  @media screen and (max-width:576px) {
     .navbar{
         display: none;
     }
     .for-mobile-01{
         display: block;
+        /* display: none; */
     }
     .for-mobile{
       display: flex;
@@ -376,9 +377,18 @@
     .img-m{
         width: 90%;
     }
+    .b-img{
+        display: flex;
+        width: 90%;
+        align-items: center;
+        justify-content: center;
+        margin-left: 17px;
+        /* display: none; */
+    }
   
     .banner{
         flex-direction: column-reverse;
+        /* display: none; */
 
     }
     .banner-title{
@@ -390,6 +400,7 @@
     }
     .curriculum-box-container{
         flex-direction: column;
+        display: none;
     }
     .left-right{
         display: none;
@@ -398,12 +409,13 @@
     display: none;
    }
    .footer-box{
-
+    /* display: none;
+     */
     flex-direction: column;
+    text-align: left;
+    align-items: baseline;
    }
-   .box-2-5-container{
-    display: none;
-   }
+   
    .banner-description{
     font-size: 14px;
    }
@@ -411,13 +423,13 @@
     gap: 50px;
    }
    .footer-des{
-    font-size: 16px;
+    font-size: 14px;
    }
    .title{
-    font-size: 26px;
-   }
+    font-size: 24px;
+   } 
    .footer-title{
-    font-size: 35.73px;
+    font-size: 32.73px;
    }
    .f-box-1>img{
     width: 69px;
@@ -428,7 +440,7 @@
    }
    .About-school{
     font-size: 20px;
-   }
+   } 
    .box{
     width: 90%;
    }
@@ -442,6 +454,42 @@
     width: 100%;
    }
    .Banner-text{
-    width: 95%;
+    width: 60%;
    }
+   .stories{
+    width: 97%;
+    margin: 0 auto;
+    /* display: none; */
+   }
+   .box-2-5-container{
+    /* display: none; */
+    width: 100%;
+    height: auto;
+    gap: 10px;
+   }
+   .box{
+    width: 173.09px;
+    height: 179.59px;
+    gap: 5px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+   }
+   .box>img{
+    width: 100%;
+    height: 108.37px;
+   }
+   .btn{
+
+    width: 103.91px;
+    height: 22.83px;
+    font-size: 9.13px;
+    padding-top: 7px;
+    margin-left: 5px;
+   }
+   .story-title-1{
+    font-size: 9.13PX;
+    /* padding: 4px; */
+    margin-bottom: 4px;
+   }
+  
 }
