--- a/style/style.css
+++ b/style/style.css
@@ -420,6 +420,8 @@
     flex-direction: column;
     text-align: left;
     align-items: baseline;
+    margin-top: 40px;
+    margin-bottom: 40px;
    }
    
    .banner-description{
